// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SLO Edit Page when the feature flag is enabled in Create mode calls the createSlo hook if all required values are filled in 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "budgetingMethod": "occurrences",
        "description": "irrelevant",
        "indicator": Object {
          "params": Object {
            "filter": "irrelevant",
            "good": "irrelevant",
            "index": "some-index",
            "total": "irrelevant",
          },
          "type": "sli.kql.custom",
        },
        "name": "irrelevant",
        "objective": Object {
          "target": 0.995,
        },
        "timeWindow": Object {
          "duration": "30d",
          "isRolling": true,
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`SLO Edit Page when the feature flag is enabled in Edit mode calls the updateSlo hook if all required values are filled in 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "2f17deb0-725a-11ed-ab7c-4bb641cfc57e",
      Object {
        "budgetingMethod": "occurrences",
        "description": "irrelevant",
        "indicator": Object {
          "params": Object {
            "filter": "baz: foo and bar > 2",
            "good": "http_status: 2xx",
            "index": "some-index",
            "total": "a query",
          },
          "type": "sli.kql.custom",
        },
        "name": "irrelevant",
        "objective": Object {
          "target": 0.98,
        },
        "settings": Object {
          "frequency": "1m",
          "syncDelay": "1m",
          "timestampField": "@timestamp",
        },
        "timeWindow": Object {
          "duration": "30d",
          "isRolling": true,
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
